tests/snapshots/arg__hide_short_help.snap
---
source: tests/arg.rs
expression: output1
---
command cat <<'EOF_202aaf82'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help (see more with '--help')
EOF_202aaf82
exit 0
