tests/snapshots/arg__ignore_case_multi.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_option=('TeSt123' 'teST123' 'tESt321')
