tests/snapshots/arg__index.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_debug='true'
claptrap_mode='fast'
