tests/snapshots/arg__it_fails_when_action_set_false_twice.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_2312ebac'
[1m[31merror:[0m the argument '[33m--flag[0m' cannot be used multiple times

[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_2312ebac
exit 1
