tests/snapshots/arg__last-1.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_first='one'
claptrap_third='three'
